--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="absolute inset-0 bg-sky-500/15 blur-lg rounded-full"></div>
                         <div
                             class="w-24 h-24 rounded-full bg-slate-800 overflow-hidden border-2 border-sky-400/50 relative z-10 shadow-xl">
-                            <img src="你的大頭照網址" alt="Jui-Ting Chien" class="w-full h-full object-cover">
+                            <img src="src/head.jpeg" alt="Jui-Ting Chien" class="w-full h-full object-cover">
                         </div>
                     </div>
                     <div>
@@ -59,6 +59,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Github project -->
                 <div
                     class="grid grid-cols-1 sm:grid-cols-3 gap-1 lg:gap-8 border-t lg:border-t-0 lg:border-l border-white/10 pt-4 lg:pt-0 lg:pl-8">
 
@@ -512,7 +513,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/national/tmp-1.jpg" alt="校園服務"
+                                <img src="/src/military/r-award-1.JPG" alt="校園服務"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -524,7 +525,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/national/tmp-1.jpg" alt="協助教學"
+                                <img src="/src/military/r-award-3.JPG" alt="協助教學"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -536,7 +537,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="src/national/tmp-3.jpg" alt="環境維護"
+                                <img src="src/military/r-award-2.JPG" alt="環境維護"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -548,7 +549,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/national/app-1.png" alt="活動支援"
+                                <img src="/src/military/app-1.png" alt="活動支援"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
