--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>簡瑞霆 Jui-Ting Chien | Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- <script src="lib/tailwindcss.devtools"></script>
-    <link rel="stylesheet" href="lib/cdnjs-all.min.css"> -->
+    <script src="lib/tailwindcss.devtools"></script>
+    <link rel="stylesheet" href="lib/cdnjs-all.min.css">
     <style>
         body {
             background-color: #0f172a;
@@ -86,8 +86,7 @@
                         </div>
                         <div class="flex flex-col items-center text-center">
                             <span
-                                class="text-[10px] font-bold text-slate-500 group-hover:text-sky-400 transition-colors">Computer
-                                Vision & AI</span>
+                                class="text-[10px] font-bold text-slate-500 group-hover:text-sky-400 transition-colors">Machine learning & AI</span>
                         </div>
                     </a>
 
@@ -425,7 +424,7 @@
                                     class="absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0 group-hover:opacity-100"
                                     src="你的影片1.mp4" loop muted playsinline preload="none">
                                 </video> -->
-                                <img src="/src/creator/mv-1.png" alt="作品1"
+                                <img src="/src/creator/mv-1-copy.png" alt="mv1"
                                     class="absolute inset-0 w-full h-full object-cover group-hover:opacity-0 transition-opacity duration-300">
                                 <!-- <div
                                     class="absolute inset-0 flex items-center justify-center bg-black/40 text-white opacity-100 group-hover:opacity-0 transition-opacity">
@@ -442,7 +441,7 @@
                                     class="absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0 group-hover:opacity-100"
                                     src="你的影片2.mp4" loop muted playsinline preload="none">
                                 </video> -->
-                                <img src="src/creator/mv-3.png" alt="作品2"
+                                <img src="src/creator/mv-3.png" alt="mv2"
                                     class="absolute inset-0 w-full h-full object-cover group-hover:opacity-0 transition-opacity duration-300">
                                 <!-- <div
                                     class="absolute inset-0 flex items-center justify-center bg-black/40 text-white opacity-100 group-hover:opacity-0 transition-opacity">
@@ -513,7 +512,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/military/r-award-1.JPG" alt="校園服務"
+                                <img src="/src/military/award-1 copy.JPG" alt="校園服務"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -525,7 +524,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/military/r-award-3.JPG" alt="協助教學"
+                                <img src="/src/military/award-3 - Copy.JPG" alt="協助教學"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -537,7 +536,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="src/military/r-award-2.JPG" alt="環境維護"
+                                <img src="src/military/award-2.JPG" alt="環境維護"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -549,7 +548,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/military/app-1.png" alt="活動支援"
+                                <img src="/src/military/app-1 - Copy.png" alt="活動支援"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
