--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                     class="absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0 group-hover:opacity-100"
                                     src="你的影片1.mp4" loop muted playsinline preload="none">
                                 </video> -->
-                                <img src="/src/creator/mv-1-copy.png" alt="mv1"
+                                <img src="src/creator/mv-1.png" alt="mv1"
                                     class="absolute inset-0 w-full h-full object-cover group-hover:opacity-0 transition-opacity duration-300">
                                 <!-- <div
                                     class="absolute inset-0 flex items-center justify-center bg-black/40 text-white opacity-100 group-hover:opacity-0 transition-opacity">
@@ -512,7 +512,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/military/award-1 copy.JPG" alt="校園服務"
+                                <img src="src/military/award-1" alt="校園服務"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -524,7 +524,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/military/award-3 - Copy.JPG" alt="協助教學"
+                                <img src="src/military/award-2.JPG" alt="協助教學"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -536,7 +536,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="src/military/award-2.JPG" alt="環境維護"
+                                <img src="src/military/award-3.JPG" alt="環境維護"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
@@ -548,7 +548,7 @@
                         <div
                             class="group relative overflow-hidden rounded-2xl border border-white/10 hover:border-amber-500 transition-all">
                             <div class="aspect-[2/3] w-full bg-slate-700">
-                                <img src="/src/military/app-1 - Copy.png" alt="活動支援"
+                                <img src="src/military/app-1.png" alt="活動支援"
                                     class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex items-end p-4">
