--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <div class="relative group">
                         <div class="absolute inset-0 bg-sky-400/20 blur-2xl rounded-full animate-pulse group-hover:bg-sky-400/40 transition-all"></div>
                         
-                        <div class="w-36 h-36 rounded-full bg-slate-800 overflow-hidden border-4 border-white/5 relative z-10 shadow-2xl transition-all duration-500 group-hover:scale-105 group-hover:border-sky-400/50">
-                            <img src="src/head.jpeg" alt="Jui-Ting Chien" class="w-full h-full object-cover grayscale-[20%] group-hover:grayscale-0 transition-all">
+                        <div class="w-36 h-36 rounded-full bg-slate-800 overflow-hidden border-4 border-white/5 relative z-10 shadow-xl">
+                            <img src="src/head.jpeg" alt="Jui-Ting Chien" class="w-full h-full object-cover">
                         </div>
                     </div>
 
@@ -65,9 +65,17 @@
                         </div>
                         
                         <div class="mt-3 flex flex-wrap justify-center md:justify-start gap-2">
-                            <span class="px-3 py-1 rounded-full bg-sky-500/10 border border-sky-500/20 text-sky-400 text-[10px] font-bold uppercase tracking-wider">Cybersecurity</span>
-                            <span class="px-3 py-1 rounded-full bg-purple-500/10 border border-purple-500/20 text-purple-400 text-[10px] font-bold uppercase tracking-wider">AI Researcher</span>
-                            <span class="px-3 py-1 rounded-full bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-[10px] font-bold uppercase tracking-wider">Content Creator</span>
+                            <span class="px-3 py-1 rounded-full bg-sky-500/10 border border-sky-500/20 text-sky-400 text-[10px] font-bold uppercase tracking-wider transition-all duration-300 hover:bg-sky-500/30 hover:border-sky-500/50 hover:-translate-y-0.5 hover:shadow-[0_0_15px_rgba(56,189,248,0.3)] cursor-default">
+                                Cybersecurity
+                            </span>
+
+                            <span class="px-3 py-1 rounded-full bg-purple-500/10 border border-purple-500/20 text-purple-400 text-[10px] font-bold uppercase tracking-wider transition-all duration-300 hover:bg-purple-500/30 hover:border-purple-500/50 hover:-translate-y-0.5 hover:shadow-[0_0_15px_rgba(168,85,247,0.3)] cursor-default">
+                                AI Researcher
+                            </span>
+
+                            <span class="px-3 py-1 rounded-full bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-[10px] font-bold uppercase tracking-wider transition-all duration-300 hover:bg-emerald-500/30 hover:border-emerald-500/50 hover:-translate-y-0.5 hover:shadow-[0_0_15px_rgba(16,185,129,0.3)] cursor-default">
+                                Content Creator
+                            </span>
                         </div>
 
                         <p class="mt-4 text-slate-300 text-sm font-medium max-w-xs leading-relaxed">
@@ -79,7 +87,7 @@
                                 <i class="far fa-envelope text-sky-400 group-hover:scale-110"></i>
                                 <span class="font-mono">a47u0905@gmail.com</span>
                             </a>
-                            <div class="flex items-center gap-2 text-slate-600 text-xs opacity-90 select-none">
+                            <div class="flex items-center gap-2 text-slate-600 text-xs opacity-95 select-none">
                                 <i class="fab fa-linkedin"></i>
                                 <span class="font-mono">LinkedIn</span>
                             </div>
@@ -113,7 +121,7 @@
                                         <img src="src/github/juitingchien.png" class="w-10 h-10 object-contain rounded-lg">
                                     </div>
                                 </div>
-                                <span class="text-[10px] font-bold text-slate-400 group-hover:text-white text-center leading-tight">ML<br>& AI</span>
+                                <span class="text-[10px] font-bold text-slate-400 group-hover:text-white text-center leading-tight">AI & CV</span>
                             </a>
 
                             <a href="https://github.com/SiNNature" target="_blank" class="group flex flex-col items-center gap-3">
@@ -241,7 +249,8 @@
                         </div>
 
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                            <div class="flex flex-col items-center text-center group">
+                            <a href="https://learn.microsoft.com/en-us/users/sinnature/credentials/4481221b01aa7bcb" target="_blank"
+                            class="flex flex-col items-center text-center group">
                                 <img src="src/certification/microsoft/zero-state-applied-skills.svg"
                                     class="w-20 h-20 mb-4 group-hover:scale-110 transition-transform">
                                 <span
@@ -250,8 +259,9 @@
                                 </span>
                                 <h4 class="text-sm font-bold text-slate-200">Administer AD Domain Services</h4>
                                 <span class="text-[10px] font-mono text-slate-500 mt-2">2025-11-26</span>
-                            </div>
-                            <div class="flex flex-col items-center text-center group">
+                            </a>
+                            <a href="https://www.credly.com/badges/fd328694-95b3-4ad4-aa22-2c5d9bdc6c16/public_url" target="_blank" 
+                            class="flex flex-col items-center text-center group">
                                 <img src="src/certification/cisco/network-support-and-security.png"
                                     class="w-20 h-20 mb-4 group-hover:scale-110 transition-transform">
                                 <span
@@ -260,8 +270,9 @@
                                 </span>
                                 <h4 class="text-sm font-bold text-slate-200">Network Support and Security</h4>
                                 <span class="text-[10px] font-mono text-slate-500 mt-2">2026-01-30</span>
-                            </div>
-                            <div class="flex flex-col items-center text-center group">
+                            </a>
+                            <a href="https://www.credly.com/badges/09c7241d-c966-4a25-b272-f9d6fcbcb53e/public_url" target="_blank"
+                            class="flex flex-col items-center text-center group">
                                 <img src="src/certification/redhat/red-hat-certified-system-administrator-rhcsa.png"
                                     class="w-20 h-20 mb-4 group-hover:scale-110 transition-transform">
                                 <span
@@ -270,7 +281,7 @@
                                 </span>
                                 <h4 class="text-sm font-bold text-slate-200">System Administrator</h4>
                                 <span class="text-[10px] font-mono text-slate-500 mt-2">2025-12-19</span>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </section>
@@ -292,7 +303,7 @@
                         </div>
 
                         <h3 class="font-bold text-xl text-white mb-3 group-hover:text-amber-300 transition-colors">
-                            <a href="#" class="hover:underline">Unsupervised Meta-learning of Figure-ground Segmentation
+                            <a href="https://scholar.google.com/citations?view_op=view_citation&hl=zh-TW&user=-DiAhGEAAAAJ&citation_for_view=-DiAhGEAAAAJ:2osOgNQ5qMEC" target="_blank" class="hover:underline">Unsupervised Meta-learning of Figure-ground Segmentation
                                 via Imitating Visual Effects</a>
                         </h3>
 
@@ -314,7 +325,7 @@
                         </div>
 
                         <h3 class="font-bold text-xl text-white mb-3 group-hover:text-indigo-300 transition-colors">
-                            <a href="#" class="hover:underline">Tap and Shoot Segmentation</a>
+                            <a href="https://scholar.google.com/citations?view_op=view_citation&hl=zh-TW&user=-DiAhGEAAAAJ&citation_for_view=-DiAhGEAAAAJ:u-x6o8ySG0sC" target="_blank" class="hover:underline">Tap and Shoot Segmentation</a>
                         </h3>
 
                         <div class="flex items-start gap-2">
@@ -335,7 +346,7 @@
                         </div>
 
                         <h3 class="font-bold text-xl text-white mb-3 group-hover:text-sky-300 transition-colors">
-                            <a href="#" class="hover:underline">Self Adversarial Training for Human Pose Estimation</a>
+                            <a href="https://scholar.google.com/citations?view_op=view_citation&hl=zh-TW&user=-DiAhGEAAAAJ&citation_for_view=-DiAhGEAAAAJ:u5HHmVD_uO8C" target="_blank" class="hover:underline">Self Adversarial Training for Human Pose Estimation</a>
                         </h3>
 
                         <div class="flex items-start gap-2">
@@ -355,7 +366,7 @@
                         </div>
 
                         <h3 class="font-bold text-xl text-white mb-3 group-hover:text-emerald-300 transition-colors">
-                            <a href="#" class="hover:underline">Detecting Nonexistent Pedestrians</a>
+                            <a href="https://scholar.google.com/citations?view_op=view_citation&hl=zh-TW&user=-DiAhGEAAAAJ&citation_for_view=-DiAhGEAAAAJ:d1gkVwhDpl0C" target="_blank" class="hover:underline">Detecting Nonexistent Pedestrians</a>
                         </h3>
 
                         <div class="flex items-start gap-2">
@@ -376,7 +387,7 @@
                         </div>
 
                         <h3 class="font-bold text-xl text-white mb-3 group-hover:text-rose-300 transition-colors">
-                            <a href="#" class="hover:underline">Extracting Driving Behavior: Global Metric Localization
+                            <a href="https://scholar.google.com/citations?view_op=view_citation&hl=zh-TW&user=-DiAhGEAAAAJ&citation_for_view=-DiAhGEAAAAJ:9yKSN-GCB0IC" target="_blank" class="hover:underline">Extracting Driving Behavior: Global Metric Localization
                                 from Dashcam Videos in the Wild</a>
                         </h3>
 
