--- a/index.html
+++ b/index.html
@@ -910,10 +910,10 @@
                 </section>
                 <section class="glass rounded-3xl p-4 mt-6">
                     <h2 class="text-xl font-bold mb-4 text-white tracking-tight">
-                        Plug-in Example
+                        Plugin Example
                     </h2>
                     
-                    <div class="space-y-6">
+                    <a href="https://sinnature.github.io/" class="space-y-6">
                         <div class="group">
                             <div class="flex flex-col gap-3">                                    
                                 <div class="relative overflow-hidden rounded-xl border border-white/10 bg-slate-900">
@@ -922,7 +922,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </section>            
                 <!-- Life -->
                 <section class="glass rounded-3xl p-6">
